--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>RSS агрегатор</title>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
   <header class="bg-dark">
     <div class="container-fluid bg-dark p-5">
       <div class="row ml-2">
@@ -24,11 +24,23 @@
             </div>
           </form>
           <p class="pt-2 text-secondary">Пример: https://ru.hexlet.io/lessons.rss</p>
+          <div class="feedback"></div>
         </div>
       </div>
     </div>
   </header>
-
+  <main>
+    <section class="container-fluid p-5">
+      <div class="row">
+        <div class="col-md-10 col-lg-8 mx-auto feeds">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-10 col-lg-8 mx-auto posts">
+        </div>
+      </div>
+    </section>
+  </main>
 
 </body>
 </html>
