--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
   <title>RSS агрегатор</title>
 </head>
 <body class="d-flex flex-column min-vh-100">
+<!-- Modal -->
+<div class="modal fade" id="modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel"></h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+      </div>
+      <div class="modal-footer">
+        <a type="button" href="#" class="btn btn-primary full-article" target="_blank">Читать полностью</a>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+      </div>
+    </div>
+  </div>
+</div>
   <header class="bg-dark">
     <div class="container-fluid bg-dark p-5">
       <div class="row ml-2">
@@ -41,6 +58,5 @@
       </div>
     </section>
   </main>
-
 </body>
 </html>
